--- a/tmux.conf
+++ b/tmux.conf
@@ -8,8 +8,7 @@ set -g status-left "[#S] #W | #{=25:pane_title} | #{=-50:pane_current_path} | #{
 
 set -g window-status-current-style "underscore"
 
-set -g status-bg red
-# "#061522"
+set -g status-bg "#061522"
 set -g status-fg "#607080"
 
 # If running inside tmux ($TMUX is set), then change the status line to red
@@ -44,7 +43,7 @@ setw -g mode-keys vi
 
 # Plugins
 # tpm standard
-# set -g @plugin 'tmux-plugins/tpm':
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # other plugins
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
@@ -56,4 +55,4 @@ setenv -g 'LANG' 'en_US.UTF-8'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # https://github.com/tmux-plugins/tpm?tab=readme-ov-file#installation
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
