--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,8 @@
 # Some tweaks to the status line
 set -g status on
 set -g status-justify centre
-set -g status-right-length 25
-set -g status-right " %Y-%m-%d %a %H:%M %Z"
+set -g status-right-length 30
+set -g status-right "  %Y-%m-%d %a %H:%M %Z"
 set -g status-left-length 120
 set -g status-left "[#S] #W | #{=25:pane_title} | #{=-50:pane_current_path} | #{client_termtype} "
 
@@ -29,6 +29,9 @@ set -g visual-activity off
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",-256color:Tc"
  
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Turn the mouse on, but without copy mode dragging
 set -g mouse on
