--- a/tmux.conf
+++ b/tmux.conf
@@ -8,8 +8,8 @@ set -g status-left "[#S] #W | #{=25:pane_title} | #{=-50:pane_current_path} | #{
 
 set -g window-status-current-style "underscore"
 
-set -g status-bg "#061522"
-set -g status-fg "#607080"
+set -g status-bg "#111111"
+set -g status-fg "#006688"
 
 # If running inside tmux ($TMUX is set), then change the status line to red
 %if #{TMUX}
@@ -26,12 +26,14 @@ set -gq allow-passthrough on
 set -g visual-activity off 
 
 # Enable RGB colour if running in xterm(1)
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",-256color:Tc"
- 
+# set -g default-terminal "xterm-kitty:Tc"
+set -g default-terminal "tmux-256color"
+# set -ag terminal-overrides ",xterm-kitty:Tc"
+
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind z set status
 
 # Turn the mouse on, but without copy mode dragging
 set -g mouse on
