Bind 'prefix-v' to toggle status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -33,7 +33,7 @@ set -g default-terminal "tmux-256color"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
-bind z set status
+bind v set status
 
 # Turn the mouse on, but without copy mode dragging
 set -g mouse on
