--- a/tmux.conf
+++ b/tmux.conf
@@ -8,13 +8,13 @@ set -g status-left "[#S] #W | #{=25:pane_title} | #{=-50:pane_current_path} | #{
 
 set -g window-status-current-style "underscore"
 
-set -g status-bg "#111111"
-set -g status-fg "#006688"
+set -g status-bg "colour8"
+set -g status-fg "colour4"
 
 # If running inside tmux ($TMUX is set), then change the status line to red
 %if #{TMUX}
-set -g status-bg darkred
-set -g status-fg yellow
+set -g status-bg "colour1"
+set -g status-fg "colour3"
 %endif
 
 
@@ -45,6 +45,10 @@ set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
 
 # https://youtu.be/nTqu6w2wc68?si=Ut_9F1BvQkUBARHm&t=948
 setw -g mode-keys vi
+
+# setup for image.nvim
+set -gq allow-passthrough on
+set -g visual-activity off
 
 # Plugins
 # tpm standard
